# valvecontrol_firmware

./: .gitmodules  CMakeLists.txt  Makefile  config.json  partitions.csv  readme.txt  sdkconfig
app/: asset-manifest.json  espfs.paths  espfs.yaml  index.html
components/FreeRTOScpp/: CMakeLists.txt  Lock.cpp  Lock.h  MutexCPP.h  QueueCPP.h  SemaphoreCPP.h  TaskCPP.h  TimerCPP.h
components/fmt/: CMakeLists.txt
components/http/: CMakeLists.txt  DefaultHandler.cpp  DefaultHandler.h  FileHandler.cpp  FileHandler.h  HttpAuth.cpp  HttpAuth.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  RepositoryHandler.cpp  RepositoryHandler.h  RequestHandlerBase.cpp  RequestHandlerBase.h  base64.h  iHandler.h  socket.cpp  socket.h  utilities.cpp  utilities.h
components/jsonconfig/: jsonconfig.c  jsonconfig.h
components/logger/: CMakeLists.txt  circular_buffer.h  circular_policy.h  logger.h  logger_def.h  logger_impl.h  logger_policy.h
components/mqtt_user/: base85.h  mgtt_config.c  mqtt_config.h  mqtt_user.c  mqtt_user.cpp  mqtt_user.h  mqtt_user_ota.c  mqtt_user_ota.cpp  mqtt_user_ota.h
main/: CMakeLists.txt  Cipher.cpp  Cipher.h  ConnectionObserver.h  FreeRTOSCPP.cpp  HttpRequest.cpp  HttpRequest.h  HttpServer.cpp  HttpServer.h  Json.h  Kconfig  Kconfig.projbuild  LedFlasher.cpp  LedFlasher.h  MainClass.cpp  MainClass.h  MqttRepAdapter.cpp  MqttRepAdapter.h  RepositoryHandler.cpp  RepositoryHandler.h  WifiManager.cpp  WifiManager.h  WifiTask.cpp  WifiTask.h  abstractchannel.h  app_main.cpp  base85.c  base85.h  cert.c  channel.cpp  channel.h  channelAdapter.cpp  channelAdapter.h  channelBase.cpp  channelBase.h  channelFactory.cpp  channelFactory.h  component.mk  config.cpp  config.h  (+67 more)
main/MQTTClient-C/src/mbedtls/: MQTTmbedtls.c
spiffs_image/: config.json
tools/: app_copy.sh  multiEchoClient.py  sendConfig.py  upload.py
