idf_component_register(SRCS "base85.c"
                            "FreeRTOSCPP.cpp"
                            "MainClass.cpp"
                            "MqttRepAdapter.cpp"
                            "RepositoryHandler.cpp"
                            "WifiManager.cpp"
                            "app_main.cpp"
                            "FreeRTOSCPP.cpp"
                            "channelAdapter.cpp"
                            "channelFactory.cpp"
                            "config.cpp"
                            "echoServer.cpp"
                            "mqttWorker.cpp"
                            "otaHandler.cpp"
                            "otaWorker.cpp"
                            "property.cpp"
                            "repository.cpp"
                            "sht1x.cpp"
                            "sntp.cpp"
                            "utilities.cpp"
                            "tasks.cpp" INCLUDE_DIRS
                            "." REQUIRES FreeRTOScpp mqtt http variant nvs_flash
                                json njson app_update pthread logger spiffs fmt)
